--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </table>
 
 
-    <footer>
+    <footer class="site-footer">
         <p>© 2025 Ipari Enterprises</p>
         <p>Készítette: Bankó Olivér, Benedek Zsombor, Kovács Botond, Nagy Levente</p>
     </footer>
