--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
         alert("Kérlek töltsd ki az összes mezőt!");
         return;
     }
+    if (kezdora > 24 || kezdperc > 60 || orahossz > 60 || atlagszunet > 60 || nagyszunet >60){
+      alert("Valós értékeket adj meg!")
+      return;
 
     // Időpont segédfüggvények
     function idoFormat(ora, perc) {
@@ -92,6 +95,7 @@
             perc -= 60;
             ora++;
         }
+        ora = ora % 24;
         return [ora, perc];
     }
 
@@ -124,7 +128,7 @@
             [aktualisOra, aktualisPerc] = hozzaadPercet(aktualisOra, aktualisPerc, atlagszunet);
         }
     }
-});
+}});
 </script>
 
     <footer class="site-footer">
