kész verzió már csak a css-en változtassatok!!!!!!!!!

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="csengetes.js"></script>
     <title>Órarend kalkulátor</title>
 </head>
 <body>
@@ -14,8 +15,8 @@
     <p>Átlagos szünet hossza (perc): <input type="number" name="atlagszunet" id="atlagszunet"></p>
     <p>Nagyszünet hossza (perc): <input type="number" name="nagyszunet" id="nagyszunet"></p>
     <p>Nagyszünet ez az óra után van: <input type="number" name="nagyido" id="nagyido"></p>
-    <p><button id="button">Csengetési rend generálása</button></p>
-
+    <p><button onclick="csengetes()">Csengetési rend generálása</button></p>
+    
   <table>
     <caption><b>A csengetési rend</b></caption>
     <tr>
@@ -64,72 +65,7 @@
       <td></td>
     </tr>
   </table>
- 
-<script>
-    document.querySelector("button").addEventListener("click", function() {
-    // Bemeneti adatok beolvasása
-    let kezdora = parseInt(document.getElementById("kezdora").value);
-    let kezdperc = parseInt(document.getElementById("kezdperc").value);
-    let orahossz = parseInt(document.getElementById("orahossz").value);
-    let atlagszunet = parseInt(document.getElementById("atlagszunet").value);
-    let nagyszunet = parseInt(document.getElementById("nagyszunet").value);
-    let nagyido = parseInt(document.getElementById("nagyido").value);
-
-    // Ellenőrzés
-    if (isNaN(kezdora) || isNaN(kezdperc) || isNaN(orahossz) || isNaN(atlagszunet) || isNaN(nagyszunet) || isNaN(nagyido)) {
-        alert("Kérlek töltsd ki az összes mezőt!");
-        return;
-    }
-    if (kezdora > 24 || kezdperc > 60 || orahossz > 60 || atlagszunet > 60 || nagyszunet >60){
-      alert("Valós értékeket adj meg!")
-      return;
-
-    // Időpont segédfüggvények
-    function idoFormat(ora, perc) {
-        return (ora < 10 ? "0" + ora : ora) + ":" + (perc < 10 ? "0" + perc : perc);
-    }
-
-    function hozzaadPercet(ora, perc, mennyi) {
-        perc += mennyi;
-        while (perc >= 60) {
-            perc -= 60;
-            ora++;
-        }
-        ora = ora % 24;
-        return [ora, perc];
-    }
-
-    // Táblázat törlése az új generálás előtt
-    let sorok = document.querySelectorAll("table tr");
-    for (let i = 1; i < sorok.length; i++) {
-        sorok[i].children[0].innerText = "";
-        sorok[i].children[1].innerText = "";
-        sorok[i].children[2].innerText = "";
-    }
-
-    // Órák számítása (max 8)
-    let aktualisOra = kezdora;
-    let aktualisPerc = kezdperc;
-
-    for (let i = 1; i <= 8; i++) {
-        let oraKezdete = idoFormat(aktualisOra, aktualisPerc);
-        [aktualisOra, aktualisPerc] = hozzaadPercet(aktualisOra, aktualisPerc, orahossz);
-        let oraVege = idoFormat(aktualisOra, aktualisPerc);
-
-        // Táblázat kitöltése
-        sorok[i].children[0].innerText = i + ". óra";
-        sorok[i].children[1].innerText = oraKezdete + " - " + oraVege;
-        sorok[i].children[2].innerText = orahossz + " perc";
-
-        // Óra utáni szünet
-        if (i === nagyido) {
-            [aktualisOra, aktualisPerc] = hozzaadPercet(aktualisOra, aktualisPerc, nagyszunet);
-        } else if (i < 8) {
-            [aktualisOra, aktualisPerc] = hozzaadPercet(aktualisOra, aktualisPerc, atlagszunet);
-        }
-    }
-}});
-</script>
+  
 
     <footer class="site-footer">
         <p>© 2025 Ipari Enterprises</p>
